syntax = "proto3";
package ignition;

import "util.proto";
import "admin.proto";
import "image.proto";
import "deployment.proto";

service Admin {
  rpc ListUsers(ignition.util.Empty) returns (ignition.admin.ListUsersResponse);
  rpc CreateUser(ignition.admin.CreateUserRequest) returns (ignition.admin.CreateUserResponse);
  rpc SetStatus(ignition.admin.SetStatusRequest) returns (ignition.admin.SetStatusResponse);
  rpc CreateUserToken(ignition.admin.CreateUserTokenRequest) returns (ignition.admin.CreateUserTokenResponse);
}

/*service Image {
  rpc CreatePullSecret(ignition.image.CreatePullSecretRequest) returns (ignition.image.CreatePullSecretResponse);
  rpc DeletePullSecret(ignition.image.DeletePullSecretRequest) returns (ignition.util.Empty);
  rpc ListPullSecrets(ignition.util.Empty) returns (ignition.image.ListPullSecretsResponse);

  rpc Upload(stream ignition.image.ImageUploadRequest) returns (ignition.image.ImageUploadResponse);
  rpc Import(ignition.image.ImportImageRequest) returns (ignition.image.ImportImageResponse);

  rpc ListImages(ignition.util.Empty) returns (ignition.image.ListImagesResponse);
} */

/* service Deployment {
  rpc Apply(ignition.deployment.ApplyConfigRequest) returns (ignition.deployment.ApplyConfigResponse);
  rpc GetDeployment(ignition.deployment.GetDeploymentRequest) returns (ignition.deployment.GetDeploymentResponse);
  rpc DeleteDeployment(ignition.deployment.DeleteDeploymentRequest) returns (ignition.deployment.DeleteDeploymentResponse);
  rpc ListDeployments(ignition.deployment.ListDeploymentsRequest) returns (ignition.deployment.ListDeploymentsResponse);
} */